[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/bg_title/path_1.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/bg_title/path_2.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/bg_title/path_3.png" type="Texture" id=4]
[ext_resource path="res://assets/GUI/bg_title/path_4.png" type="Texture" id=5]
[ext_resource path="res://assets/GUI/bg_title/path_5.png" type="Texture" id=6]
[ext_resource path="res://assets/GUI/bg_title/path_6.png" type="Texture" id=7]
[ext_resource path="res://assets/GUI/bg_title/path_7.png" type="Texture" id=8]
[ext_resource path="res://assets/GUI/bg_title/path_8.png" type="Texture" id=9]
[ext_resource path="res://assets/gui/gameover.png" type="Texture" id=10]
[ext_resource path="res://assets/player/adventurer-die-06.png" type="Texture" id=11]
[ext_resource path="res://assets/logo.png" type="Texture" id=12]
[ext_resource path="res://assets/ttf/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "intro",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TELA" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BG" type="CenterContainer" parent="TELA"]
modulate = Color( 0.411765, 0.4, 0.4, 1 )
margin_right = 1024.0
margin_bottom = 600.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="TELA/BG"]
position = Vector2( 15.1093, 0 )
scale = Vector2( 1.57814, 1.80959 )
frames = SubResource( 1 )
animation = "intro"
frame = 6
playing = true
centered = false
offset = Vector2( -100, 0 )

[node name="gameover" type="Node2D" parent="TELA/BG"]
editor/display_folded = true
visible = false
position = Vector2( 805.771, 512.882 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="TELA/BG/gameover"]
scale = Vector2( 0.228022, 0.228022 )
texture = ExtResource( 10 )

[node name="Sprite2" type="Sprite" parent="TELA/BG/gameover"]
position = Vector2( -124, 30 )
scale = Vector2( 2.54094, 2.54094 )
texture = ExtResource( 11 )

[node name="LogoContainer" type="CenterContainer" parent="TELA"]
editor/display_folded = true
margin_right = 1024.0
margin_bottom = 600.0

[node name="HBOX" type="HBoxContainer" parent="TELA/LogoContainer"]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="Dark Path" type="Sprite" parent="TELA/LogoContainer/HBOX"]
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="MENU" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = 100.0
margin_right = 512.0
margin_bottom = 288.0

[node name="HBOX" type="HBoxContainer" parent="MENU"]
margin_right = 1024.0
margin_bottom = 188.0
alignment = 1

[node name="VBOX" type="VBoxContainer" parent="MENU/HBOX"]
margin_left = 438.0
margin_right = 585.0
margin_bottom = 188.0
alignment = 1

[node name="NewGame" type="Button" parent="MENU/HBOX/VBOX"]
margin_top = 48.0
margin_right = 147.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.552941, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Novo Jogo"
flat = true

[node name="ContinueGame" type="Button" parent="MENU/HBOX/VBOX"]
margin_top = 80.0
margin_right = 147.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.552941, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
disabled = true
text = "Continuar"
flat = true

[node name="Quit" type="Button" parent="MENU/HBOX/VBOX"]
margin_top = 112.0
margin_right = 147.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.552941, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Sair"
flat = true
[connection signal="pressed" from="MENU/HBOX/VBOX/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MENU/HBOX/VBOX/ContinueGame" to="." method="_on_ContinueGame_pressed"]
[connection signal="pressed" from="MENU/HBOX/VBOX/Quit" to="." method="_on_Quit_pressed"]
